# konrul

./: .gitignore  Dockerfile  README.md  build_code_analyses.sh  main.py
benchmarks/blas/: dot.mlir  gemv.mlir  ger.mlir
benchmarks/dsp/: matadd.mlir  matinit.mlir  matmul.mlir  matscal.mlir  matsub.mlir  vadd.mlir  vcopy.mlir  vfill.mlir  vmul.mlir  vneg.mlir  voffset.mlir  vrecip.mlir  vscal.mlir  vsub.mlir  w_vec.mlir
benchmarks/makespeare/: sum_of_squares.mlir
benchmarks/mathfu/: diveq.mlir  diveq_sca.mlir  len.mlir  len_sq.mlir  lerp.mlir  matmul_sca.mlir  muleq.mlir  muleq_sca.mlir  negate.mlir  pluseq.mlir  subeq.mlir  subeq_sca.mlir
benchmarks/simpl_array/: array_inc.mlir  array_sum.mlir  cube_in_place.mlir  fourth_in_place.mlir  sum_elts.mlir
konrul/: check.py  constants.py  einsum_program.py  export.py  guess.py  io_handler.py  io_test.py  literal_constant_scan.py  lowering.py  search.py
program_similarity/arithmetic_operators/: ArithOpSim.cpp  CMakeLists.txt
program_similarity/variable/: CMakeLists.txt  VariableSim.cpp
verification/: CMakeLists.txt  export_to_JAX.py  verify.py
verification/build_tools/: build_dependencies.sh  build_mlirSynth.sh
verification/build_tools/patches/llvm/: enable-emit-c-for-more-ops.patch  translate-to-cpp.patch
verification/mlirSynth/: CMakeLists.txt
verification/mlirSynth/analysis/: PolyhedralAnalysis.cc  PolyhedralAnalysis.h
verification/mlirSynth/analysis/isl/: isl_helper.cc  isl_helper.h  isl_noexceptions.h  isl_tools.h
verification/mlirSynth/bindings/c/: CMakeLists.txt  MlirSynthCApi.cc  MlirSynthCApi.h  MlirSynthPasses.cc  MlirSynthPasses.h
verification/mlirSynth/bindings/python/: MlirSynthExtension.cc
verification/mlirSynth/bindings/python/mlir_synth/: synth.py
verification/mlirSynth/common/: Common.h  ContextManager.cc  ContextManager.h
verification/mlirSynth/execution/: ArgUtils.cc  ArgUtils.h  ArrayUtils.cc  ArrayUtils.h  Executor.cc  Executor.h  Lowering.cc  Lowering.h
verification/mlirSynth/tools/: CMakeLists.txt  LowerCHLOToAffine.cc  Opt.cc  TestExecutor.cc
verification/mlirSynth/transforms/: AnnotateLastStoredMemrefArgPass.cc  CMakeLists.txt  ChangeSizesPass.cc  CleanupPass.cc  CopyModifiedMemrefsPass.cc  FoldToTensorToMemrefPairPass.cc  LoopOutlinePass.cc  MemrefCopyToLoopsPass.cc  MemrefRank0ToScalarPass.cc  Passes.h  Passes.td  PrepareTargetPass.cc  ReturnLastStoredMemrefArgPass.cc  TargetOutlinePass.cc  Utils.cc  Utils.h
verification/mlirSynth/validation/: CheckingValidator.cc  CheckingValidator.h  TestingValidator.cc  TestingValidator.h
verification/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
verification/test/equiv/: gemm.mlir  heat_3d_no_loop.mlir
verification/test/transforms/: change-sizes.mlir  memref-copy-to-loops.mlir
